--- a/app/mailers/forgotPasswordEmailTemplate.ejs
+++ b/app/mailers/forgotPasswordEmailTemplate.ejs
@@ -75,7 +75,7 @@
     <br />
     <p>If you didn't request this change, please ignore this email.</p>
     <br />
-    <div class="bskart"><a href="http://bskart.com/" >Go To BsKart</a></div>
+    <div class="bskart"><a href="https://bskart.com/" >Go To BsKart</a></div>
   </div>
 </body>
 </html>
