--- a/app/mailers/orderCancelEmailTemplate.ejs
+++ b/app/mailers/orderCancelEmailTemplate.ejs
@@ -182,10 +182,10 @@
         <div class='OrderItemMainDiv' >
           <div class='col-md-12'>
               <div class='OrderItemDiv'>
-                <a href="http://bskart.com/product-details/<%=productObj.p_id%>">
+                <a href="https://bskart.com/product-details/<%=productObj.p_id%>">
                   <img
                       class='OrderImage'
-                      src="http://bskart.com/images/product/<%=productObj.image_name%>"
+                      src="https://bskart.com/images/product/<%=productObj.image_name%>"
                       alt='No Image Found'
                   />
                 </a>
