--- a/app/mailers/orderPlaceEmailTemplate.ejs
+++ b/app/mailers/orderPlaceEmailTemplate.ejs
@@ -191,7 +191,7 @@ const keys = Object.keys(orderHash[0]);
               <div class='OrderItemDiv'>
                   <img
                       class='OrderImage'
-                      src="http://bskart.com/images/product/<%=obj.image_name%>"
+                      src="https://bskart.com/images/product/<%=obj.image_name%>"
                       alt='No Image Found'
                   />
               </div>
@@ -230,7 +230,7 @@ const keys = Object.keys(orderHash[0]);
 <% 
   }); 
 %>
-    <div class="bskart"><a href="http://bskart.com/my-order" >Order Details</a></div>
+    <div class="bskart"><a href="https://bskart.com/my-order" >Order Details</a></div>
   </div>
 </body>
 </html>
