--- a/app/mailers/passwordChangeEmailTemplate.ejs
+++ b/app/mailers/passwordChangeEmailTemplate.ejs
@@ -70,7 +70,7 @@
   <div class="container">
     <p>Great to hear that you've successfully changed your password</p>
     <br />
-    <div class="bskart"><a href="http://bskart.com/" >Go To BsKart</a></div>
+    <div class="bskart"><a href="https://bskart.com/" >Go To BsKart</a></div>
   </div>
 </body>
 </html>
