--- a/app/mailers/signUpEmailTemplate.ejs
+++ b/app/mailers/signUpEmailTemplate.ejs
@@ -73,7 +73,7 @@
     <br />
     <p>At BsKart, we're more than just an online store – we're your go-to destination for the latest trends, high-quality products</p>
     <br />
-    <div class="bskart"><a href="http://bskart.com/" >Go To BsKart</a></div>
+    <div class="bskart"><a href="https://bskart.com/" >Go To BsKart</a></div>
   </div>
 </body>
 </html>
